# sup

./: Cargo.toml  README.md  build.rs  pyproject.toml
.github/workflows/: build-private.yml  build.yml
src/: lib.rs
sup/: __init__.py  __main__.py
tests/: test_ripgrep.py
