[package]
name = "sup"
version = "0.1.0"
edition = "2021"

[lib]
name = "sup"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
grep = "0.3"
grep-regex = "0.1"
grep-searcher = "0.1"
walkdir = "2"
ignore = "0.4"

# No build dependencies needed - using system commands for git/curl/tar

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true